--- a/Diffusion-SDF/data_processing/environment.yml
+++ b/Diffusion-SDF/data_processing/environment.yml
@@ -1,6 +1,7 @@
 name: diffusionsdf-data_processing
 channels:
   - defaults
+  - conda-forge
 dependencies:
   - pip:
     - scikit-image==0.19.2
@@ -9,3 +10,5 @@ dependencies:
     - pandas==2.0.0
     - matplotlib==3.7.1
     - h5py==3.8.0
+    - rtree==1.0.1
+    - libstdcxx-ng
