--- a/Diffusion-SDF/data_processing/environment.yml
+++ b/Diffusion-SDF/data_processing/environment.yml
@@ -3,12 +3,19 @@ channels:
   - defaults
   - conda-forge
 dependencies:
+  - python=3.9
+  - pip=21.2.4
+  - libgcc  # conda install libgcc; conda install -c conda-forge libgcc
+  - libstdcxx-ng  # conda install libstdcxx-ng; conda install -c conda-forge libstdcxx-ng
   - pip:
-    - scikit-image==0.19.2
-    - scikit-learn==1.2.1
-    - jupyter==1.0.0
-    - pandas==2.0.0
-    - matplotlib==3.7.1
-    - h5py==3.8.0
-    - rtree==1.0.1
-    - libstdcxx-ng
+      - scikit-image==0.19.2
+      - scikit-learn==1.2.1
+      - jupyter==1.0.0
+      - pandas==2.0.0
+      - matplotlib==3.7.1
+      - h5py==3.8.0
+      - rtree==1.0.1
+      - mesh-to-sdf
+      - open3d  # pip3 install open3d
+      - tqdm
+
