--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+datasets/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
